--- a/web3-gaming-explorer-ui/src/App.scss
+++ b/web3-gaming-explorer-ui/src/App.scss
@@ -1,38 +1,62 @@
+@import "./variables.scss";
+
 .App {
-  text-align: center;
-}
+  overflow: hidden;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  .top-projects {
+    width: 80%;
+    margin: auto;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    h1 {
+      color: $white;
+    }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    table {
+      width: 100%;
+      color: $white;
+      border-collapse: collapse;
 
-.App-link {
-  color: #61dafb;
-}
+      thead {
+        $thead-border: 1px $grey-blue solid;
+        border-bottom: $thead-border;
+        border-top: $thead-border;
+      }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+      tbody {
+        font-size: 1.25em;
+        tr {
+          height: 2.5em;
+          cursor: pointer;
+
+          img {
+            width: 25px;
+            height: 25px;
+            margin: 0 10px;
+          }
+
+          .symbol {
+            margin: 0px 10px;
+          }
+
+          &:hover {
+            background-color: rgba(249, 249, 249, 0.1);
+          }
+        }
+      }
+    }
+
+    td,
+    th {
+      &#rank {
+        text-align: center;
+      }
+      &#name {
+        text-align: left;
+      }
+      &#price {
+        text-align: right;
+        padding-right: 10px;
+      }
+    }
   }
 }
