--- a/web3-gaming-explorer-ui/src/App.scss
+++ b/web3-gaming-explorer-ui/src/App.scss
@@ -104,9 +104,24 @@
         display: flex;
         flex-direction: row;
         gap: 20px;
+        align-items: center;
 
         img {
           object-fit: contain;
+          height: 60px;
+        }
+
+        .favorite {
+          font-size: 2em;
+          cursor: pointer;
+
+          &:hover {
+            color: $grey;
+          }
+
+          .active {
+            color: $yellow;
+          }
         }
       }
     }
